syntax = "proto3";

package go.micro.service.dbproxy;
option go_package = "cloud_distributed_storage/Backend/service/dbproxy/proto; proto";


service DBProxyService {
//  Execute a database query
  rpc ExecuteAction(ReqExec) returns (ResExec) {}
}

message SingleAction {
  string name = 1;
  bytes params = 2; // json encoded
}

message ReqExec {
  bool sequence = 1;  // whether to execute in sequence
  bool transaction = 2; // whether to execute in a transaction
  int32 resultType = 3; // 0: every sql result will be returned, 1: only return the last result
  repeated SingleAction actions = 4; // one or more actions
}

message ResExec {
  int32 code = 1;
  string msg = 2;
  bytes data = 3; // executed result, json encoded
}